--- a/frontend/themes/agrosoft/styles.css
+++ b/frontend/themes/agrosoft/styles.css
@@ -2,6 +2,7 @@
 @import url('./views/about-view.css');
 @import url('./views/inicio-view.css');
 @import url('./views/nuevasiembra-view.css');
+@import url('./views/parcelas-view.css');
 @import url('./views/proveedores-view.css');
 @import url('lumo-css-framework/all-classes.css');
 @import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');    html {
