--- a/frontend/themes/agrosoft/views/inicio-view.css
+++ b/frontend/themes/agrosoft/views/inicio-view.css
@@ -28,6 +28,9 @@
     transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: var(--lumo-base-color);
     box-shadow: 0 0 15px rgb(0, 158, 47);
+    width: 210px;
+    height: 130px;
+    margin: 5px;
 }
 
 .inicio-view .card img {
